# bellhoppe

./: .coverage  .gitignore  Makefile  PLOTUTILS_REVIEW.md  README.md  TYPE_HINTS_SUMMARY.md  final_validation.env  ford.md  fpm.toml  pyproject.toml  simple_test.arr  simple_test.env  test_debug_angles.arr  test_debug_angles.env  test_debug_detailed.arr  test_debug_detailed.bty  test_debug_detailed.env  test_negative_range.arr  test_negative_range.env  test_positive_range.arr  test_positive_range.env
.github/: copilot-instructions.md
.github/workflows/: check.yml  coverage.yml  docs.yml  lint.yml
Bellhop/: ArrMod.f90  ArrMod.gcda  Cone.f90  Makefile  RayNormals.f90  ReadEnvironmentBell.f90  ReadEnvironmentBell.gcda  Reflect3DMod.f90  ReflectMod.f90  ReflectMod.gcda  Step.f90  Step.gcda  Step3DMod.f90  WriteRay.f90  WriteRay.gcda  angleMod.f90  angleMod.gcda  bdry3DMod.f90  bdryMod.f90  bdryMod.gcda  bellhop.f90  bellhop.gcda  bellhop3D.f90  bellhopMod.f90  bellhopMod.gcda  influence.f90  influence.gcda  influence3D.f90  sspMod.f90  sspMod.gcda
_coverage/: ArrMod.f90.coverage.html  AttenMod.f90.coverage.html  Cone.f90.coverage.html  FatalError.f90.coverage.html  PolyMod.f90.coverage.html  RWSHDFile.f90.coverage.html  ReadEnvironmentBell.f90.coverage.html  RefCoef.f90.coverage.html  ReflectMod.f90.coverage.html  SortMod.f90.coverage.html  SourceReceiverPositions.f90.coverage.html  Step.f90.coverage.html  WriteRay.f90.coverage.html  angleMod.f90.coverage.html  bdryMod.f90.coverage.html  beampattern.f90.coverage.html  bellhop.f90.coverage.html  bellhopMod.f90.coverage.html  coverage-index.html  cross_products.f90.coverage.html  influence.f90.coverage.html  monotonicMod.f90.coverage.html  pchipMod.f90.coverage.html  splinec.f90.coverage.html  sspMod.f90.coverage.html  subtabulate.f90.coverage.html
docs/: DATACLASS_VALIDATION.md  coverage.md  fpm.toml  index.md
docs-python/: README.md  conf.py  index.rst
docs-python/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs-python/_build/html/.doctrees/: environment.pickle  index.doctree
docs-python/_build/html/_modules/: index.html
docs-python/_build/html/_modules/bellhop/: bellhop.html  plot.html
docs/ford/: ford.md  fpm.toml
docs/pages/: CHANGES.md  index.md  technical.md
docs/python/: api.rst  code.rst  conf.py  create.rst  defaults.rst  environment.rst  getting_started.rst  index.rst  internals.rst  readers.rst  setup.rst
docs/python/_ext/: dataclass_table.py
docs/quarto/: _quarto.yml  compute.qmd  environ.qmd  index.qmd  intro.qmd  lev_latlonZ.mat  ssp.qmd  surface.qmd
examples/Munk/: MunkB_Coh.shd  MunkB_ray.ray
examples/arctic/: arcticB.html  arcticB.py
fortran/: ArrMod.f90  AttenMod.f90  Cone.f90  FatalError.f90  Makefile  MathConstants.f90  PolyMod.f90  RWSHDFile.f90  RayNormals.f90  ReadEnvironmentBell.f90  RefCoef.f90  Reflect3DMod.f90  ReflectMod.f90  SortMod.f90  SourceReceiverPositions.f90  Step.f90  Step3DMod.f90  angleMod.f90  bdry3DMod.f90  bdryMod.f90  beampattern.f90  bellhop3D.f90  bellhopMod.f90  cross_products.f90  influence.f90  influence3D.f90  monotonicMod.f90  pchipMod.f90  splinec.f90  sspMod.f90  subtabulate.f90
misc/: AttenMod.f90  AttenMod.f90.gcov  AttenMod.gcda  AttenMod.gcno  FatalError.f90  FatalError.gcda  Makefile  MathConstants.f90  MathConstants.gcno  MergeVectorsMod.f90  PekRoot.f90  PolyMod.f90  PolyMod.gcda  RWSHDFile.f90  RWSHDFile.gcda  ReadEnvironmentMod.f90  RefCoef.f90  RefCoef.gcda  RootFinderSecantMod.f90  SortMod.f90  SortMod.gcda  SourceReceiverPositions.f90  SourceReceiverPositions.gcda  beampattern.f90  beampattern.f90.gcov  beampattern.gcda  beampattern.gcno  calculateweights.f90  cross_products.f90  interpolation.f90  monotonicMod.f90  monotonicMod.f90.gcov  monotonicMod.gcda  monotonicMod.gcno  munk.f90  pchipMod.f90  pchipMod.gcda  splinec.f90  splinec.gcda  splined.f90  (+4 more)
python/: generate_coverage_html.py  generate_unified_coverage.py
python/bellhop/: __init__.py  bellhop.py  bellhop.py,cover  bellhop.py.backup  constants.py  create.py  environment.py  environment_dataclass.py  main.py  plot.py  plotutils.py  pyplot.py  readers.py  setup.py
python/docs/: conf.py
scripts/: generate_coverage_html.py
tests/: README_check_error_analysis.md  test_00_import.py  test_01_simple.py  test_01_simple_model.py  test_02_errors.py  test_03_settings.py  test_04_simple_model.py  test_05_env.py  test_06_bellhop3d.py  test_07_models.py  test_08_exe.py  test_DickinsB.py  test_Ellipse.py  test_MunkB_geo_rot.py  test_arrivals.py  test_check_error.py  test_check_error_integration.py  test_dataclass_validation.py  test_eigenrays.py  test_exe.py  test_free_FGB.py  test_interp.py  test_malformed_env.py  test_malformed_files.py  test_models.py  test_negative_range.py  test_plotting.py  test_read_biol.py  test_read_env2d.py  test_read_files.py  test_readers_coverage.py  test_shaded.py  test_simple.py  test_sqrt_bug.py  test_ssp.py  test_tl.py
tests/BeamPattern/: test_shaded.py
tests/Dickins/: DickinsB_one_beam.env  DickinsB_one_beam_wrong.env  test_DickinsB.py
tests/Ellipse/: test_Ellipse.py
tests/MunkB_geo_rot/: MunkB_geo_rot.shd  MunkB_geo_rot.ssp  MunkB_geo_rot_botx.env  test_MunkB_geo_rot.py  xtest_MunkB_geo_rot.py
tests/Munk_SSP/: test_MunkB_ssp.py
tests/VolAtt/: free_FGB.shd  test_free_FGB.py
tests/malformed_env/: bad_media.env
tests/only_python/: test_00_plotting.py  test_01_pyplotting.py  test_plot_arr.py  test_plot_env.py  test_plot_rays.py  test_plot_ssp.py  test_plot_tl.py  test_plotting.py
tests/refl_coeff/: test_read_rc.py
tests/simple/: simple.py
tests/z_only_python/: test_00_plotting.py  test_plot_env.py  test_plot_ssp.py
